--- a/msa/user-prod.yml
+++ b/msa/user-prod.yml
@@ -34,7 +34,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     password: '1234'
     username: poly
-    url: jdbc:mariadb://localhost:3306/myDB
+    url: jdbc:mariadb://localhost:3306/msa
   application:
     name: USER-SERVICE
 #  boot:
