--- a/msa/user-prod.yml
+++ b/msa/user-prod.yml
@@ -28,6 +28,7 @@ spring:
         default_batch_fetch_size: 100
         format_sql: 'true'
         use_sql_comments: 'true'
+#        dialect: org.hibernate.dialect.MariaDBDialect # 추가된 부분
     show-sql: 'true'
     open-in-view: 'false'
   datasource:
@@ -37,10 +38,10 @@ spring:
     url: jdbc:mariadb://localhost:3306/msa
   application:
     name: USER-SERVICE
-#  boot:
-#    admin:
-#      client:
-#        url: http://${ADMIN-MANAGER-IP}:${ADMIN-MANAGER-PORT}
+  boot:
+    admin:
+      client:
+        url: http://localhost:15000
 jwt:
   token:
     creator: poly
