--- a/msa/user-prod.yml
+++ b/msa/user-prod.yml
@@ -35,7 +35,7 @@ spring:
     driver-class-name: org.mariadb.jdbc.Driver
     password: '1234'
     username: poly
-    url: jdbc:mariadb://localhost:3306/msa
+    url: jdbc:mariadb://192.168.139.128:3306/msa
   application:
     name: USER-SERVICE
   boot:
